# MV4PG

./: README.md  results.xlsx  tugraph.sh  tugraph_test.sh
neo4j_Test/: create_views.py  create_views2.py  explain.md  finbench_test.sh  input.txt  neo4j_run.py  neo4j_way.py  oldtime.json  opt_neo4j_run.py  opttime.json  testt.py  view_test.py
neo4j_Test/finbench/: create_log.txt  optimization.txt
neo4j_Test/finbench_result/: all_writetime.json  oldtime.json  oldwritetime.json
neo4j_Test/ldbcSf1/: maintenance_log.txt  optimization.txt  output.json
neo4j_Test/test_cypher/: new_cypherq.json  profile.py  testt.py  tu_connect_test.py
neo4j_test/: README.md  create_views.py  db.sh  filter.py  finbench_test.sh  ldbc_test.sh  ldbc_test_sf10.sh  new_run.py  run_dataset.sh  test_cypher.py  total.sh
neo4j_test/CypherRewrite/: CMakeLists.txt  main.cpp  neo4jcypher.h
neo4j_test/chem/: output.json
neo4j_test/finbench/: output.json
neo4j_test/finbench_result/: all_opt_writetime.json  opttime.json  optwritetime.json
neo4j_test/ldbcSf1/: create_log.txt  optimization.txt  output.json
neo4j_test/ldbcSf10_new/: output.json
neo4j_test/test_cypher/: input.txt  neo4j_way.py  new_cypher.json  new_cypherq.json  profile.json  profile.py  testt.py
tugraph_test/: tugraph_prepare.sh  tugraph_test.sh
view_test/: Change_city.cypher  create_log.txt  label_order.md  maintenance_log.txt  multi_delete.sh  optimization.txt  profile.sh  recover.py  temp  temp.sh  test.py  test.sh  view_test.cy  view_test_create.py  view_test_maintenance.py  view_test_opt.py
(+448 files in other folders)
